bug 357958 Ignore unsupported content encodings instead of making them a fatal error r+sr=darin